# Kinematic-Omniwheels-in-Webots

./: README.md
controllers/3omniwheels/: 3omniwheels.cpp  CMakeLists.txt  Kinematic.cpp  Kinematic.h  Motion.h  def.h
controllers/4omni_wheels/: Kinematik.cpp  Kinematik.h  Motion.cpp  def.h  omni_robot_test  omni_robot_test.cpp
controllers/omni_robot_test/: CMakeLists.txt  Kinematik.cpp  Kinematik.h  control_pid.cpp  control_pid.h  def.h  omni_robot_test  omni_robot_test.cpp
protos/: four_omniwheels.proto  three_omniwheel.proto
worlds/: .coba.wbproj  .worlds.wbproj  worlds.wbt
